add feature queue
